# bookkeeper

./: .gitignore  format.sh  instruction.txt  lint.sh  pyproject.toml
.github/workflows/: python-package.yml
bookkeeper/: __main__.py  bookkeeper.py  simple_client.py  utils.py
bookkeeper/models/: budget.py  category.py  expense.py
bookkeeper/repository/: abstract_repository.py  memory_repository.py  sqlite_repository.py
bookkeeper/view/: __main__.py  view.py
tests/test_repository/: test_common_repository.py
