[tool.poetry]
name = "pybookkeeper"
version = "0.1.0"
description = "Python app to manage your personal finances"
authors = ["Anatoly Chistov <atchistov@gmail.com>", "LXDMIPT Group",
           "Stanislav Sidelnikov <sidelnikov.si.001@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bookkeeper"}]
repository = "https://github.com/LXDMIPT/bookkeeper"
keywords = ["bookkeeper", "python"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
pylint = "^2.15.10"
flake8 = "^6.0.0"
mccabe = "^0.7.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
